tag alignment issue fixed

--- a/src/components/LearnCard/LearnCard.scss
+++ b/src/components/LearnCard/LearnCard.scss
@@ -33,7 +33,7 @@
   margin: 0;
 }
 .qui .qui-tag-container {
-  margin-top: 0.5em;
+  margin-bottom: 0.5em;
 }
 .qui .qui-points {
   display: flex;
